Fixed alignment of closeModal in Safari

--- a/site/assets/css/kb-portfolio.scss
+++ b/site/assets/css/kb-portfolio.scss
@@ -258,8 +258,6 @@ article {
     #overlay #closeModal {
         padding: 0 2rem 0 .5rem;
         width: auto;
-        top: 0;
-        right: 0;
         border-radius: 0;
 
         span {
