--- a/site/assets/css/modal.scss
+++ b/site/assets/css/modal.scss
@@ -40,7 +40,7 @@
 #overlay #closeModal {
     position: relative;
     grid-area: close;
-    justify-self: right;
+    justify-self: end;
 
     border: none;
     background: #ffffff;
